--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,25 +4,10 @@
         "module": "ESNext",
         "rootDir": "./src/",
         "outDir": "./dist/",
-        "strict": true,
-        "moduleResolution": "node",
-        "importHelpers": true,
-        "experimentalDecorators": true,
-        "esModuleInterop": true,
-        "skipLibCheck": true,
         "allowSyntheticDefaultImports": true,
-        "resolveJsonModule": true,
-        "forceConsistentCasingInFileNames": true,
-        "removeComments": true,
-        "typeRoots": [
-            "node_modules/@types"
-        ],
-        "sourceMap": false,
-        "baseUrl": "./"
+        "moduleResolution": "Node",
+        "esModuleInterop": true
     },
-    "files": [
-        "src/app.ts"
-    ],
     "include": [
         "./**/*.ts"
     ],
